Consistent formatting with spaces. Small improvements.